fix spacing

--- a/src/components/settings-modal/account-settings/account-settings.module.css
+++ b/src/components/settings-modal/account-settings/account-settings.module.css
@@ -36,7 +36,7 @@
 }
 
 .deleteAccount {
-  margin-top: 10px;
+  margin-top: 15px;
   display: block;
   color: red;
 }
